add fade in transition

--- a/frontend/src/components/Gallery.astro
+++ b/frontend/src/components/Gallery.astro
@@ -13,7 +13,7 @@ const tags = await getAllTags("illustration");
 <ul class="gallery masonry relative w-full">
   {
     illustrations.map((i) => (
-      <li class="absolute transition duration-250">
+      <li class="absolute transition duration-250 animate-fade-in">
         <GalleryImage illustration={i} />
       </li>
     ))
