add lazy loading

--- a/frontend/src/components/GalleryImage.astro
+++ b/frontend/src/components/GalleryImage.astro
@@ -31,6 +31,7 @@ const thumbnailUrl = urlForImage(img)
       alt={illustration.alt}
       width={thumbWidth}
       height={thumbHeight}
+      loading="lazy"
     />
   </a>
   <div class="caption-content hidden">
