change unused styles and adjust transition timing

--- a/frontend/src/components/Gallery.astro
+++ b/frontend/src/components/Gallery.astro
@@ -13,7 +13,7 @@ const tags = await getAllTags("illustration");
 <ul class="grid gallery masonry w-full">
   {
     illustrations.map((i) => (
-      <li class=" hidden masonry-item transition duration-250 animate-fade-in max-w-full h-auto">
+      <li class=" hidden masonry-item transition duration-300 animate-fade-in">
         <GalleryImage illustration={i} />
       </li>
     ))
