--- a/frontend/src/pages/about.astro
+++ b/frontend/src/pages/about.astro
@@ -11,9 +11,11 @@ const title = "About";
 ---
 
 <MainLayout title={title}>
-  <img src={aboutImage} alt="" />
-  <div
-    class="text-riso-purple"
-    set:html={sanityPortableText(siteSettings.aboutMe)}
-  />
+  <div class="mt-6 grid md:grid-cols-1-2 gap-12">
+    <img src={aboutImage} alt="" />
+    <div class="text-riso-green">
+      <h2 class="uppercase text-xl font-semibold">About Me</h2>
+      <div class="mt-2" set:html={sanityPortableText(siteSettings.aboutMe)} />
+    </div>
+  </div>
 </MainLayout>
