--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -3,4 +3,11 @@ import MainLayout from "../layouts/MainLayout.astro";
 const title = "Through The Dungeon Home";
 ---
 
-<MainLayout title={title} />
+<MainLayout title={title}>
+  <div class="mt-6 w-full h-full bg-riso-blue flex-grow"></div>
+  <div class="mt-3 grid md:grid-cols-3 gap-3 h-80 w-full">
+    <div class="bg-riso-blue"></div>
+    <div class="bg-riso-blue"></div>
+    <div class="bg-riso-blue"></div>
+  </div>
+</MainLayout>
