fixed images getting distorted

--- a/frontend/src/components/blog/BlogCardImage.astro
+++ b/frontend/src/components/blog/BlogCardImage.astro
@@ -33,7 +33,7 @@ const largeImage = urlForImage(illustration.image)
 <img
   class:list={[
     "border-l-16",
-    "h-36 md:h-56 lg:h-72",
+    "h-36 md:h-56 lg:h-72 object-cover",
     borderColor.border,
     borderColor.bg,
   ]}
