--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import { getSiteSettings } from "../lib/sanity";
+import { urlForImage } from "../lib/sanityImageUrlBuilder";
 const title = "Through The Dungeon Home";
+const siteSettings = await getSiteSettings();
+const pinnedPost = siteSettings.pinnedPost;
+const imageUrl = urlForImage(pinnedPost.image).height(500).url();
 ---
 
 <MainLayout title={title}>
-  <div class="mt-6 w-full h-full bg-riso-blue flex-grow"></div>
-  <div class="mt-3 grid md:grid-cols-3 gap-3 h-80 w-full">
-    <div class="bg-riso-blue"></div>
-    <div class="bg-riso-blue"></div>
-    <div class="bg-riso-blue"></div>
-  </div>
+  <img src={imageUrl} alt="" />
 </MainLayout>
