remove home link

--- a/frontend/src/components/NavBar.astro
+++ b/frontend/src/components/NavBar.astro
@@ -1,5 +1,4 @@
 ---
-import HamburgerMenu from "./HamburgerMenu.astro";
 import NavBarLink from "./NavBarLink.astro";
 ---
 
@@ -7,7 +6,7 @@ import NavBarLink from "./NavBarLink.astro";
   <ul
     class="container mx-auto text-riso-blue text-center bg-white gap-6 flex flex-col md:flex-row md:justify-center"
   >
-    <li><NavBarLink href="/">Home</NavBarLink></li>
+    <!-- <li><NavBarLink href="/">Home</NavBarLink></li> -->
     <li><NavBarLink href="/blog/">Blog</NavBarLink></li>
     <li><NavBarLink href="/gallery/">Gallery</NavBarLink></li>
     <li><NavBarLink href="/about/">About</NavBarLink></li>
