--- a/frontend/src/components/BaseHead.astro
+++ b/frontend/src/components/BaseHead.astro
@@ -1,4 +1,8 @@
 ---
+import { getSiteSettings } from "../lib/sanity";
+
+const siteSettings = await getSiteSettings();
+const description = siteSettings.description;
 export interface Props {
   title: string;
 }
@@ -10,6 +14,7 @@ const { title } = Astro.props;
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width" />
   <meta name="generator" content={Astro.generator} />
+  <meta name="description" content={description} />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
