comment and spacing

--- a/frontend/src/pages/_index.astro
+++ b/frontend/src/pages/_index.astro
@@ -1,4 +1,5 @@
 ---
+// disabled page not in use
 import MainLayout from "../layouts/MainLayout.astro";
 import { getSiteSettings } from "../lib/sanity";
 import { urlForImage } from "../lib/sanityImageUrlBuilder";
