--- a/frontend/src/components/Header.astro
+++ b/frontend/src/components/Header.astro
@@ -10,11 +10,17 @@ const settings = await getSiteSettings();
   <div class="flex flex-col-reverse justify-between gap-4 md:block">
     <NavBar />
     <div class="flex justify-between gap-5 md:block">
-      <h1
-        class="text-riso-red text-lg font-semibold uppercase md:mt-2 md:font-bold md:text-3xl md:text-center"
-      >
-        <a href="/">{settings.title}</a>
-      </h1>
+      <div class="md:text-center text-riso-red">
+        <h1
+          class="text-lg font-semibold uppercase md:mt-2 md:font-bold md:text-3xl"
+        >
+          <a href="/">{settings.title}</a>
+        </h1>
+        <h2 class="hidden md:block text-sm">
+          {settings.subtitle}
+        </h2>
+      </div>
+
       <HamburgerMenu />
     </div>
   </div>
