--- a/frontend/src/pages/about.astro
+++ b/frontend/src/pages/about.astro
@@ -6,13 +6,17 @@ import { urlForImage } from "../lib/sanityImageUrlBuilder";
 import SocialsLink from "../components/socialsLink.astro";
 const siteSettings = await getSiteSettings();
 const socials = siteSettings.socials;
-const aboutImage = urlForImage(siteSettings.aboutMeImage.image).url();
+
+let aboutImage;
+if (siteSettings.aboutMeImage) {
+  aboutImage = urlForImage(siteSettings.aboutMeImage.image).url();
+}
 const title = "About";
 ---
 
 <MainLayout title={title}>
   <div class="max-w-lg mt-6 space-y-5">
-    <img src={aboutImage} alt="" />
+    {siteSettings.aboutMeImage && <img src={aboutImage} alt="" />}
     <div class="text-riso-green">
       <h2 class="uppercase text-xl font-semibold">About Me</h2>
       <div class="mt-2" set:html={sanityPortableText(siteSettings.aboutMe)} />
