--- a/frontend/src/pages/about.astro
+++ b/frontend/src/pages/about.astro
@@ -15,8 +15,8 @@ const title = "About";
 ---
 
 <MainLayout title={title}>
-  <div class="max-w-lg mt-6 space-y-5">
-    {siteSettings.aboutMeImage && <img src={aboutImage} alt="" />}
+  <div class="max-w-lg w-full mt-6 space-y-5">
+    {aboutImage && <img src={aboutImage} alt="" />}
     <div class="text-riso-green">
       <h2 class="uppercase text-xl font-semibold">About Me</h2>
       <div class="mt-2" set:html={sanityPortableText(siteSettings.aboutMe)} />
